<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/baloo_bhaina"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_label"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkBoxRemember"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/remember_me"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_login"
            android:textColor="#ffffff"
            android:background="@drawable/login_button_background" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="#e6e6e6"
            android:textSize="17sp"
            android:textStyle="italic"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/loginButtonGoogle"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/google_sign_in"
            app:isDarkTheme="true"/>

        <TextView
            android:id="@+id/createNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textColor="@drawable/login_hyplink_text_color"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>
</ScrollView>